fix(autocomplete): set z-index to 110 for popper wrapper

--- a/packages/arvue-ui/src/autocomplete/autocomplete-content.css
+++ b/packages/arvue-ui/src/autocomplete/autocomplete-content.css
@@ -5,3 +5,7 @@
     margin-top: .5em;
     border-radius: 0.5em;
 }
+
+.arvue-autocomplete div[data-reka-popper-content-wrapper] {
+    z-index: 110 !important;
+}
